--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4 class="font-semibold">Địa Chỉ</h4>
-                                <p>Hà Nội, Việt Nam</p>
+                                <p>Kiến Hưng, Hà Đông, Hà Nội, Việt Nam</p>
                             </div>
                         </div>
                         
