--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
                                     <i class="fab fa-tiktok"></i>
                                 </a>
                                 <a href="https://zalo.me/84386473757" target="_blank" class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white hover:bg-blue-600 transition-all">
-                                    <img src="https://cdn.jsdelivr.net/gh/hieu-nvdata/seo-image@main/2023/06/15/zalo-icon.png" alt="Zalo" width="20" height="20">
+                                    <img src="https://img.icons8.com/ios_filled/512/zalo.png" alt="Zalo" width="20" height="20">
                                 </a>
                             </div>
                         </div>
