--- a/index.html
+++ b/index.html
@@ -1562,9 +1562,8 @@
                                 <a href="https://www.tiktok.com/@vuquangecom" target="_blank" class="w-10 h-10 rounded-full bg-black flex items-center justify-center text-white hover:bg-gray-800 transition-all">
                                     <i class="fab fa-tiktok"></i>
                                 </a>
-                                <a href="https://zalo.me/84386473757" target="_blank" class="w-10 h-10 rounded-full bg-blue-500 flex items-center justify-center text-white hover:bg-blue-600 transition-all">
-                                    <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="24" height="24">
-                                </a>
+                                <a href="https://zalo.me/84386473757" target="_blank" class="rounded-full bg-blue-500 flex items-center justify-center text-white hover:bg-blue-600 transition-all">
+                                    <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
                                 </a>
                             </div>
                         </div>
