--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 <body>
     <!-- Floating Zalo Button -->
     <a href="https://zalo.me/84386473757" target="_blank" class="zalo-float">
-        <img src="https://cdn.jsdelivr.net/gh/hieu-nvdata/seo-image@main/2023/06/15/zalo-icon.png" alt="Zalo" width="40" height="40">
+        <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
     </a>
 
     <!-- Header with Modern Navigation -->
@@ -1562,7 +1562,7 @@
                                 <a href="https://www.tiktok.com/@vuquangecom" target="_blank" class="w-10 h-10 rounded-full bg-black flex items-center justify-center text-white hover:bg-gray-800 transition-all">
                                     <i class="fab fa-tiktok"></i>
                                 </a>
-                                <a href="https://zalo.me/84386473757" target="_blank" class="rounded-full bg-blue-500 flex items-center justify-center text-white hover:bg-blue-600 transition-all">
+                                <a href="https://zalo.me/84386473757" target="_blank" class="rounded-full bg-blue-500 flex items-center justify-center text-white hover: transition-all">
                                     <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
                                 </a>
                             </div>
@@ -1648,7 +1648,7 @@
                             <i class="fab fa-tiktok"></i>
                         </a>
                         <a href="https://zalo.me/84386473757" target="_blank" class="text-gray-400 hover:text-white transition-all">
-                            <img src="https://cdn.jsdelivr.net/gh/hieu-nvdata/seo-image@main/2023/06/15/zalo-icon.png" alt="Zalo" width="16" height="16" class="inline">
+                            <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
                         </a>
                     </div>
                 </div>
