--- a/index.html
+++ b/index.html
@@ -1563,7 +1563,7 @@
                                     <i class="fab fa-tiktok"></i>
                                 </a>
                                 <a href="https://zalo.me/84386473757" target="_blank" class="rounded-full bg-blue-0 flex items-center justify-center text-white hover: transition-all">
-                                    <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
+                                    <i class="fab fa-zalo"></i>
                                 </a>
                             </div>
                         </div>
