--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 <body>
     <!-- Floating Zalo Button -->
     <a href="https://zalo.me/84386473757" target="_blank" class="zalo-float">
-        <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
+        <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.jpg" alt="Zalo" width="40" height="40">
     </a>
 
     <!-- Header with Modern Navigation -->
@@ -1563,7 +1563,7 @@
                                     <i class="fab fa-tiktok"></i>
                                 </a>
                                 <a href="https://zalo.me/84386473757" target="_blank" class="rounded-full bg-blue-0 flex items-center justify-center text-white hover: transition-all">
-                                    <i class="fab fa-zalo"></i>
+                                    <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
                                 </a>
                             </div>
                         </div>
@@ -1648,7 +1648,7 @@
                             <i class="fab fa-tiktok"></i>
                         </a>
                         <a href="https://zalo.me/84386473757" target="_blank" class="text-gray-400 hover:text-white transition-all">
-                            <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png" alt="Zalo" width="40" height="40">
+                            <i class="fab fa-zalo"></i>
                         </a>
                     </div>
                 </div>
