--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 <body>
     <!-- Floating Zalo Button -->
     <a href="https://zalo.me/84386473757" target="_blank" class="zalo-float">
-        <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.jpg" alt="Zalo" width="40" height="40">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Icon_of_Zalo.svg/2048px-Icon_of_Zalo.svg.png" alt="Zalo" width="40" height="40">
     </a>
 
     <!-- Header with Modern Navigation -->
