--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1 mr-3 text-orange-500"></i>
-                            <span class="text-gray-400"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5224272327333c3537313d3f12353f333b3e7c313d3f">[email&#160;protected]</a></span>
+                            <span class="text-gray-400"><a href="mailto:vuquangecom@gmail.com">vuquangecom@gmail.com</a></span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-globe mt-1 mr-3 text-orange-500"></i>
