--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             </div>
             <div class="w-full lg:w-1/2 flex justify-center" data-aos="fade-left" data-aos-duration="1000">
                 <div class="animation-container">
-                    <img src="https://cdn.jsdelivr.net/gh/hieu-nvdata/seo-image@main/2023/06/14/shopee-hero.png" alt="Hero Image" class="rounded-lg shadow-xl floating" style="max-width: 90%;">
+                    <img src="https://lh4.googleusercontent.com/WVmv08coJYrb7C-kZywH8MWEA3ZA4yWEEb2jFbuzRSAP29kKY81EK9KYFpd-EPGrPN5PcPidsUz2206JkiwhN4Y=w16383" alt="Hero Image" class="rounded-lg shadow-xl floating" style="max-width: 90%;">
                 </div>
             </div>
         </div>
