--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
             </div>
             <div class="w-full lg:w-1/2 flex justify-center" data-aos="fade-left" data-aos-duration="1000">
                 <div class="animation-container">
-                    <img src="https://lh6.googleusercontent.com/u4IlowAS5e0LqFZ8BdNEsCxMq_oQwKtuUTxohCkRCSWg-jMH3L7uX9-ecuXxgUP14FznCiD-LY2BnHSrw8v4Mv8=w1280" alt="Hero Image" class="rounded-lg shadow-xl floating" style="max-width: 90%;">
+                    <img src="https://raw.githubusercontent.com/quangnbtd/shopee-images-1/main/Gradient%20xanh%20d%C6%B0%C6%A1ng%20%C4%91%C6%A1n%20gi%E1%BA%A3n%20d%E1%BB%85%20th%C6%B0%C6%A1ng%20khung%20s%E1%BA%A3n%20ph%E1%BA%A9m%20%C4%91%C4%83ng%20Instagram.png" alt="Hero Image" class="rounded-lg shadow-xl floating" style="max-width: 90%;">
+
                 </div>
             </div>
         </div>
